# util/OpenAPIContract.yaml
@@ -277,6 +277,29 @@ paths:
         500:
           description: Internal Server Error!
           content: {}
+  /vimeo/subtitle/{videoID}:
+    get:
+      tags:
+        - Video Subtitle
+      summary: Returns subtitles of a given vimeo video
+      operationId: getVimeoVideoSubtitle
+      parameters:
+        - name: videoID
+          in: path
+          description: video ID from Vimeo
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Query successful!
+          content:
+            text/vtt:
+              schema:
+                $ref: '#/components/schemas/VimeoVideoSubtitle'
+        500:
+          description: Internal Server Error!
+          content: { }
 components:
   schemas:
     VideoLecture:
@@ -449,3 +472,12 @@ components:
         thumbnail:
           type: string
           example: 'https://i.vimeocdn.com/video/555804356'
+    VimeoVideoSubtitle:
+      type: object
+      properties:
+        # 'file' will be the field name in this multipart request
+        file:
+          type: string
+          format: binary
+          #example: 'WEBVTT'
+
